# eliminators

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  eliminators.cabal
.github/workflows/: haskell-ci.yml
src/Data/: Eliminator.hs
src/Data/Eliminator/: Equality.hs  Functor.hs  Monoid.hs  Semigroup.hs  TH.hs  TypeLits.hs  TypeNats.hs
tests/: DecideSpec.hs  DecideTypes.hs  EqualitySpec.hs  EqualityTypes.hs  GADTSpec.hs  Internal.hs  ListSpec.hs  ListTypes.hs  MatchabilizeSpec.hs  MatchabilizeTypes.hs  NatSpec.hs  NatTypes.hs  PeanoSpec.hs  PeanoTypes.hs  PolyRecTypes.hs  VecSpec.hs  VecTypes.hs
tests/Data/: Eliminator.hs  Nat.hs  Singletons.hs
tests/Data/Singletons/: Decide.hs  Prelude.hs
tests/Data/Singletons/Prelude/: List.hs  Num.hs
